--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -523,6 +523,11 @@ pre code {
     padding: 150px 0;
   }
 }
+@media only screen and (min-width: 768px) {
+  .intro-header .post-heading{
+    padding: 100px 0;
+  }
+}
 .intro-header .site-heading {
   padding: 95px 0 70px;
 }
